--- a/MongoDbApplication/MongoDbApplication.csproj
+++ b/MongoDbApplication/MongoDbApplication.csproj
@@ -200,6 +200,9 @@
     </Compile>
     <Compile Include="Models\Character.cs" />
     <Compile Include="Models\DatabaseSettings.cs" />
+    <Compile Include="Models\Inventory.cs" />
+    <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\Weapon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Repository.cs" />
   </ItemGroup>
